// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> matches snapshot with badge content 1`] = `
<div>
  <div
    class="has-content css-1ku19ua-container-container"
  >
    <span
      class="my-class"
      id="my-id"
    >
      5
    </span>
    Messages
  </div>
</div>
`;

exports[`<Badge /> matches snapshot without badge content 1`] = `
<div>
  <div
    class="css-1ku19ua-container-container"
  >
    <span
      class="my-class"
      id="my-id"
    />
    Messages
  </div>
</div>
`;
